# air-combat-game

./: .gitignore  CMakeLists.txt  README.md
assets/: EnergyCell.ply  WWIairplane.mtl  cube.mesh  cube.ply  energycell.mesh  rock.mesh  rock.ply  sphere.ply  textured_cube.mtl  vcr_osd_mono_regular_48.agefnt  vcr_osd_mono_regular_48.fnt  vcr_osd_mono_regular_48.sfl
assets/shaders/: mesh_instance.frag
src/: actor.c  actor.h  asset.c  asset.h  assets.c  assets.h  audio.c  audio.h  calc.c  calc.h  camera.c  camera.h  collide.c  collide.h  color.c  color.h  fighter.c  fighter.h  fileutil.c  fileutil.h  font.c  font.h  game.c  game.h  hashmap.c  hashmap.h  input.c  input.h  log.c  log.h  main.c  menu.c  menu.h  mesh.c  mesh.h  orb.c  orb.h  particle.c  particle.h  platform.c  (+21 more)
src/shaders/: main.frag  main.vert  mesh_instance.frag  mesh_instance.vert  skybox.frag  skybox.vert  spd_lines.frag  spd_lines.vert  text.frag  text.vert  ui.frag  ui.vert  untextured.frag  untextured.vert
